fix: a bug where text was sticking out from the FormulaBar

--- a/src/styles/editor.less
+++ b/src/styles/editor.less
@@ -8,6 +8,11 @@
   letter-spacing: 1.0px;
 }
 
+.gs-formula-bar-editor-inner {
+  position: relative;
+  overflow-y: hidden;
+}
+
 .gs-editor {
   position: fixed;
   opacity: 0;
